# tdd

./: LICENSE  README.md  functions_tests.py  pyproject.toml
core/: settings.py
