[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["Luiz Fernando <luiz-fernando@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
selenium = "^4.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
